fix: error on background color missing

--- a/table.html
+++ b/table.html
@@ -1,12 +1,32 @@
 <table>
 	<tr>
-		<td rowspan="2" style="color: red; background-color: yellow; font-weight: bold;">Red bold text on yellow background</td>
-		<td style="color: blue;">Blue text</td>
+		<td>
+			<table>
+				<tr>
+					<td style="color: red;">Red text</td>
+					<td style="color: blue;">Blue text</td>
+				</tr>
+				<tr>
+					<td style="color: green;">Green text</td>
+					<td style="color: purple;">Purple text</td>
+				</tr>
+			</table>
+		</td>
+		<td style="color: yellow;">Yellow text</td>
 	</tr>
 	<tr>
-		<td style="color: green; font-style: italic;">Green italic text</td>
-	</tr>
-	<tr>
-		<td colspan="2" style="color: purple; background-color: lightgray;">Purple text on lightgray background</td>
+		<td style="color: orange;">Orange text</td>
+		<td>
+			<table>
+				<tr>
+					<td style="color: pink;">Pink text</td>
+					<td style="color: brown;">Brown text</td>
+				</tr>
+				<tr>
+					<td style="color: black;">Black text</td>
+					<td style="color: white;">White text</td>
+				</tr>
+			</table>
+		</td>
 	</tr>
 </table>
